--- a/index.css
+++ b/index.css
@@ -1,76 +1,23 @@
-* {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
+*{
+  text-align: center;
 }
 
-@font-face {
-    font-family: 'JalnanGothic';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/JalnanGothic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+@keyframes scale {
+  0% {transform: scale(1);}
+  100% {transform: scale(1.2);}
 }
 
-#container {
-    background-color: rgb(23, 123, 216);
-    height: 966px;
+a > img:hover {
+  animation-name: scale;
+  animation-duration: 1.2s;
+  animation-fill-mode: forwards;
 }
 
-#instarlogo {
-    border-radius: 20%;
-    width: 50px;
-    height: 50px;
+#instagram, #facebook, #github {
+  height: 50px;
+  width: 50px;
 }
-#hello {
-    height: 80px;
-    width: 250px;
-    text-align: left;
-}
-#textBox {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 100px;
-}
-
-#box1 {
-    border: 5px solid rgb(130, 234, 238);
-    border-radius: 10px;
-}
-
-#box1Title {
-    margin-top: 10px;
-    margin-left: 5px;
-    height: 600px;
-    width: 400px;
-    font-family: 'JalnanGothic', cursive;
-    font-size: 15pt;
-}
-
-#box2 {
-    border: 5px solid rgb(130, 234, 238);
-    border-radius: 10px;
-}
-
-#box2Title {
-    margin-top: 10px;
-    margin-left: 5px;
-    height: 600px;
-    width: 400px;
-    font-family: 'JalnanGothic', cursive;
-    font-size: 15pt;
-}
-
-#box3 {
-    border: 5px solid rgb(130, 234, 238);
-    border-radius: 10px;
-}
-
-#box3Title {
-    margin-top: 10px;
-    margin-left: 5px;
-    height: 600px;
-    width: 400px;
-    font-family: 'JalnanGothic', cursive;
-    font-size: 15pt;
+#bluePig {
+  height: 300px;
+  width: 300px;
 }
